# hyperliquid-data-ingestion-rust

./: Cargo.toml  README.md
data/: btc_bbo.csv
src/: main.rs
